# sserver

./: Cargo.toml  Makefile  README.md  settings.toml  sserver
src/: cli.rs  cloud.rs  errors.rs  films.rs  main.rs  models.rs  request.rs  response.rs  routes.rs  rsp.rs  settings.rs  static_server.rs
