[package]
name = "sserver"
version = "1.0.2"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
repository = "https://github.com/Dawidkubis/sserver"
license = "MIT"
description = "serve your repositories as webpages"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.4"
comrak = "0.7.0"
structopt = "0.3.14"
toml = "0.5.6"
serde = { version="1.0.110", features=["derive"] }
anyhow = "1.0.31"
