[package]
name = "sserver"
version = "1.0.1"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
repository = "https://github.com/Dawidkubis/sserver"
license = "MIT"
description = "serve your repositories as webpages"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
comrak = "0.6.2"
structopt = "0.3.5"
toml = "0.5.5"
serde = { version="1.0.104", features=["derive"] }
anyhow = "1.0.26"
